--- a/wiki/FEATURES.wiki
+++ b/wiki/FEATURES.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 - Supports only MySQL.
 
 - Generates DbTables, DbTable_Rows, DbTable_Rowsets with DocBlock tags that gives you autocompletion when coding in an IDE.
