--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -2,10 +2,14 @@
 
 === To be added in 1.1 release ===
   * Add options to generate controllers and views
+    * index view - a common grid
+    * add/edit/delete views
+  * Add getDbSelectForGrid() method to Mapper
   * Allow to change base class of forms instead of preset Zodeken_Form
   * Automatically check to add autoloader namespace into application.ini
-  * Store Zodeken options (base classes, package name...) into project's application.ini file
+  * Store Zodeken options (base classes, package name...) into project's application.ini file ([zodeken] section)
   * Add "maxlength" attribute to form elements that have length limit
+  * Add getTableName() method to DbTable
 
 === Planned features for unplanned version ===
   * Support other major database engines, not just MySQL
