--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -10,6 +10,7 @@
   * Store Zodeken options (base classes, package name...) into project's application.ini file ([zodeken] section)
   * Add "maxlength" attribute to form elements that have length limit
   * Add getTableName() method to DbTable
+  * Add option to cache table's Metadata
 
 === Planned features for unplanned version ===
   * Support other major database engines, not just MySQL
