--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,16 +1,17 @@
 #TODO List
 
-=== To be added in 1.1 release ===
+=== To be added in 1.2 release ===
   * Add options to generate controllers and views
     * index view - a common grid
     * add/edit/delete views
   * Add getDbSelectForGrid() method to Mapper
-  * Allow to change base class of forms instead of preset Zodeken_Form
-  * Automatically check to add autoloader namespace into application.ini
-  * Store Zodeken options (base classes, package name...) into project's application.ini file ([zodeken] section)
-  * Add "maxlength" attribute to form elements that have length limit
-  * ~~Add getTableName() method to DbTable~~ (already added in 1.0.1)
-  * Add option to cache table's Metadata
+
+=== To be added in 1.1 release ===
+  * ~~Allow to change base class of forms instead of preset Zodeken_Form~~
+  * ~~Automatically check to add autoloader namespace into application.ini~~
+  * ~~Store Zodeken options (base classes, package name...) into project's application.ini file ([zodeken] section)~~
+  * ~~Add "maxlength" attribute to form elements that have length limit~~
+  * ~~Add getTableName() method to DbTable~~
 
 === Planned features for unplanned version ===
   * Support other major database engines, not just MySQL
