--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,10 +1,12 @@
 #TODO List
+=== To be added in 1.3 release ===
+  * Add Form's elements to edit many-to-many records
 
 === To be added in 1.2 release ===
-  * Add options to generate controllers and views
-    * index view - a common grid
-    * add/edit/delete views
-  * Add getDbSelectForGrid() method to Mapper
+  * ~~Add options to generate controllers and views~~
+    * ~~index view - a common grid~~
+    * ~~add/edit/delete views~~
+  * ~~Add getDbSelectForGrid() method to Db_Table_Abstract~~
 
 === To be added in 1.1 release ===
   * ~~Allow to change base class of forms instead of preset Zodeken_Form~~
