- Updated change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+1.2.5 (April 3, 2012)
+	- Can now control what files and their names will be generated
 1.2.0 (March 25, 2012)
     - Added basic CRUD actions including create, read, update, delete forms
     - A grid comes with basic search, filter features
