--- a/wiki/CUSTOMIZATION.wiki
+++ b/wiki/CUSTOMIZATION.wiki
@@ -60,7 +60,7 @@ For example, the 'post' table links to the 'category' table and the referenceMap
       * 1: the lowercased mysql type, e.g. varchar
       * 2: arguments of the type if presented, e.g. 100 (taken from varchar(100))
     * *php_type:* the type that has been converted from mysql type
-type_arguments: (optional) type arguments (similary to the '2' index of the 'type')
+    * *type_arguments:* (optional) type arguments (similary to the '2' index of the 'type')
   * *hasMany:* (optional) this is quite complex, I will not explain this temporarily
 
 With the above structure, hope that you can easily change the templates and configs for it to meet your needs.
